--- a/lab1/makefile
+++ b/lab1/makefile
@@ -1,9 +1,6 @@
-CC = clang
-
 all:
 	flex demo.l
 	bison -d demo.y
-	$(CC) -o demo -g driver.c demo.tab.c lex.yy.c
-
+	clang -o demo -g driver.c demo.tab.c lex.yy.c
 clean:
-	rm -rf *.o demo lex.yy.c demo.tab.c demo.tab.h
+	rm -rf *.o lex.yy.c demo.tab.h demo.tab.c demo
